# SismaVer2

./: .gitignore  SUPABASE_SETUP.sql  app.py  app_leggero.py  chat_pubblica.py  fonti.py  meteo.py  pyproject.toml  requirements.txt  robots.txt  segnala_evento.py  supabase_setup.sql  terremoti_italia.csv
.streamlit/: config.toml
attached_assets/: Pasted-streamlit-runtime-media-file-storage-MediaFileStorageError-Error-opening-img-src-attached-as-1743596890687.txt  Pasted-streamlit-runtime-media-file-storage-MediaFileStorageError-Error-opening-img-src-attached-as-1743596969073.txt  __init__.py  app.py  chat_pubblica.py  dati_regioni_b.py  dati_regioni_raw.py  donazioni.py  emergenza.py  home.py  meteo.py  monitoraggio.py  primo_soccorso.py  requirements.txt  segnala_evento.py  terms.py  terremoti_italia.csv  vulcani.py
data/: chat_local.json  segnalazioni_locali.json
modules/: banner_utils.py  chat.py  chat_backend.py  chat_enhanced.py  csrf_protection.py  database_utils.py  dati_regioni_a.py  dati_regioni_b.py  dati_regioni_c.py  donazioni.py  emergenza.py  emergenza.py.backup  fonti.py  home.py  home_light.py  html_exporter.py  keep_alive.py  licenza.py  mappa_rischi.py  meteo.py  meteoalarm_cache.py  moderation_utils.py  monitoraggio.py  monitoraggio.py.bak  monitoraggio_base.py  monitoraggio_light.py  note_rilascio.py  numeri_utili.py  primo_soccorso.py  qualita_aria.py  rischi_allerte.py  security.py  segnala_evento.py  segnala_evento_enhanced.py  seo_utils.py  statistiche.py  supabase_timeout.py  vulcani.py  vulcani.py.backup
sql/: supabase_event_reports.sql  (+1 more)
(+8 files in other folders)
