[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium==0.14.0",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.44.0",
    "supabase>=2.15.0",
    "streamlit-js-eval>=0.1.7",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "trafilatura>=2.0.0",
    "geopy>=2.4.1",
    "branca==0.6.0",
    "anthropic>=0.49.0",
    "openai>=1.70.0",
]
